gitops/apps/trivial-php/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivial-php
  namespace: trivial-php
  labels:
    app: trivial-php
spec:
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: trivial-php
  template:
    metadata:
      labels:
        app: trivial-php
    spec:
      containers:
        - name: trivial-php
          image: ghcr.io/ismola/trivial-php:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
              ephemeral-storage: 256Mi
