gitops/apps/trivial-php/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivial-php
  namespace: trivial-php
spec:
  type: ClusterIP
  selector:
    app: trivial-php
  ports:
    - name: http
      port: 80
      targetPort: 80
