gitops/apps/trivial-php/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivial-php
  namespace: trivial-php
spec:
  ingressClassName: traefik
  rules:
    - host: ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trivial-php
                port:
                  number: 80
